# cffi-luau

./: CMakeLists.txt  README.md
src/: ffi.cc  ffi.hh  ffilib.cc  lua.hh  main.cc  parser.cc  platform.hh
tests/: CMakeLists.txt  host.cc
